--- a/python_outlook_jupyter_notebook-inbox_send_emails.ipynb
+++ b/python_outlook_jupyter_notebook-inbox_send_emails.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a6b8a7ae",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "ea697c23",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "87fc7ae5",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "c4992bfd",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "4bf4bba3",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "9c9f8def",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "28f49a24",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "580903c4",
    "metadata": {},
    "outputs": [],
@@ -98,50 +98,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "5c141227",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to folder\n",
-    "inbox_reject = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"inbox\")\n",
-    "messages_rejected = inbox_reject.Items\n",
+    "# Connect to folder inbox\n",
+    "inbox = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"Applications\")\n",
     "\n",
-    "dates_reject=[]\n",
+    "#messages_inbox = inbox.Items\n",
     "\n",
-    "messages = inbox_reject.Items\n",
+    "dates_inbox=[]\n",
+    "\n",
+    "messages = inbox.Items\n",
     "\n",
     "for message in messages:\n",
     "    \n",
     "    #subject = message.Subject\n",
     "    #body = message.body\n",
     "    #attachments = message.Attachments\n",
-    "    dates_reject.append(message.SentOn.strftime(\"%Y-%m-%d\"))"
+    "    dates_inbox.append(message.SentOn.strftime(\"%Y-%m-%d\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "fa84834f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to folder <Applications>\n",
-    "inbox_application = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"send\")\n",
-    "messages_application = inbox_application.Items\n",
-    "dates_application=[]\n",
-    "messages = inbox_application.Items\n",
+    "# Connect to folder send\n",
+    "send = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"rejected\")\n",
+    "\n",
+    "dates_send=[]\n",
+    "\n",
+    "messages = send.Items\n",
+    "\n",
+    "\n",
     "for message in messages:\n",
     "    \n",
     "    #subject = message.Subject\n",
     "    #body = message.body\n",
     "    #attachments = message.Attachments\n",
-    "    dates_application.append(message.SentOn.strftime(\"%Y-%m-%d\"))"
+    "    dates_send.append(message.SentOn.strftime(\"%Y-%m-%d\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "9b7de57a",
    "metadata": {},
    "outputs": [
@@ -149,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of emails in inbox Folder:  1119\n"
+      "Number of emails in inbox Folder:  1225\n"
      ]
     }
    ],
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "b74b1567",
    "metadata": {},
    "outputs": [
@@ -167,12 +171,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of emails in sent Folder:  0\n"
+      "Number of emails in sent Folder:  206\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of emails in sent Folder: \",len(dates_sent))"
+    "print(\"Number of emails in sent Folder: \",len(dates_send))"
    ]
   },
   {
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "32ed8fae",
    "metadata": {},
    "outputs": [],
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "ec0e8241",
    "metadata": {},
    "outputs": [],
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "0a66d4a0",
    "metadata": {},
    "outputs": [
@@ -225,7 +229,7 @@
        "              dtype='datetime64[ns]', length=214, freq='D')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "9b234c6a",
    "metadata": {},
    "outputs": [],
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "1b2f5904",
    "metadata": {},
    "outputs": [],
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "6e917347",
    "metadata": {},
    "outputs": [
@@ -375,7 +379,7 @@
        "[214 rows x 3 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "1c94f293",
    "metadata": {},
    "outputs": [],
@@ -395,15 +399,15 @@
     "    \n",
     "    day = str(i)[0:10]\n",
     "    \n",
-    "    app = dates_application.count(day)\n",
-    "    rej = dates_reject.count(day)\n",
+    "    app = dates_inbox.count(day)\n",
+    "    rej = dates_send.count(day)\n",
     "\n",
     "    count_emils.loc[day]=[app,rej,count_emils.loc[day][\"Date\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "ec0ba859",
    "metadata": {},
    "outputs": [
@@ -463,7 +467,7 @@
        "2022-12-31     0    0 2022-12-31"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 21,
    "id": "8433f168",
    "metadata": {},
    "outputs": [],
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "d9b1f98a",
    "metadata": {},
    "outputs": [
@@ -524,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 23,
    "id": "7d14ef99",
    "metadata": {},
    "outputs": [
@@ -549,8 +553,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Applications</th>\n",
-       "      <th>Rejections</th>\n",
+       "      <th>inbox</th>\n",
+       "      <th>send</th>\n",
        "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -578,13 +582,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           Applications Rejections       Date\n",
-       "2022-06-01            0          0 2022-06-01\n",
-       "2022-06-02            0          0 2022-06-02\n",
-       "2022-06-03            0          0 2022-06-03"
+       "           inbox send       Date\n",
+       "2022-06-01     0    0 2022-06-01\n",
+       "2022-06-02     0    0 2022-06-02\n",
+       "2022-06-03     0    0 2022-06-03"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "d88417ce",
    "metadata": {},
    "outputs": [],
@@ -605,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "ffe2cfe4",
    "metadata": {},
    "outputs": [
@@ -673,7 +677,7 @@
        "2022-06-26      1     0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "31868583",
    "metadata": {
     "scrolled": false
@@ -719,62 +723,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9554d28a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75385973",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d440660c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "412c2c89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16d72bb6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11f57843",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68823a90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5758635c",
    "metadata": {},
    "outputs": [],
    "source": []
