--- a/python_outlook_jupyter_notebook-inbox_send_emails.ipynb
+++ b/python_outlook_jupyter_notebook-inbox_send_emails.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# Connect to folder inbox\n",
-    "inbox = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"Applications\")\n",
+    "inbox = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"inbox\")\n",
     "\n",
     "#messages_inbox = inbox.Items\n",
     "\n",
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "# Connect to folder send\n",
-    "send = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"rejected\")\n",
+    "send = outlook.Folders(\"pablocalatayudpelayo@gmail.com\").Folders(\"send\")\n",
     "\n",
     "dates_send=[]\n",
     "\n",
